made config to build linux package